[wayland] Popup windows does not behave correctly when layout.css.devPixelsPerPx != -1
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | disabled |
| firefox75 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | --- | disabled |
| firefox78 | --- | disabled |
| firefox79 | --- | disabled |
| firefox82 | --- | wontfix |
| firefox83 | --- | fixed |
People
(Reporter: dm, Assigned: jhorak)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(4 files)
|
105.92 KB,
image/png
|
Details | |
|
830 bytes,
patch
|
Details | Diff | Splinter Review | |
|
6.32 KB,
patch
|
Details | Diff | Splinter Review | |
|
47 bytes,
text/x-phabricator-request
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:77.0) Gecko/20100101 Firefox/77.0
Steps to reproduce:
Set layout.css.devPixelsPerPx to value different than 1 or -1.
Actual results:
The menus are misplaced
Expected results:
The menus shouldn't be misplaced
Regression introduced by https://bugzilla.mozilla.org/show_bug.cgi?id=1623974.
It doesn't work since 57400551129c73bf1a5b738e7fa03d331c02601d.
Updated•6 years ago
|
Updated•6 years ago
|
Updated•6 years ago
|
Comment 3•6 years ago
|
||
Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is -- (non,) indicating it has has not been previously triaged, the bug's Severity is being updated to -- (default, untriaged.)
Wouldn't it be enough to apply a patch like https://hg.mozilla.org/mozilla-central/rev/3fe51c2cecad?
A screenshot showing the context menu placement with layout.css.devPixelsPerPx set to 1.15 and with Wayland enabled in Firefox 77.0.
Updated•6 years ago
|
Is there any progress on this? I suppose many Linux users with hiDPI display rely on layout.css.devPixelsPerPx to scale the UI. It's been months with a broken browser experience for them. If there's anything I can do that does not involve writing code, I am happy to help.
Here two patch files, back ported some code from: 57400551129c73bf1a5b738e7fa03d331c02601d.
Tested with firefox-80.0.1, wayland and config layout.css.devPixelsPerPx = 1.25.
firefox-80.0.1-nsMenuPopupFrame.cpp.patch
firefox-80.0.1-nsWindow.cpp.patch
Comment 10•5 years ago
|
||
Comment 11•5 years ago
|
||
Jan, can you look at them? I'm afraid the anchor changes may introduce a regression when popup is moved on screen edge but I may be wrong.
Thanks.
| Assignee | ||
Comment 12•5 years ago
|
||
I've tried the patch, but unfortunately we cannot accept it. It fixes the devPixelsPerPx issue but the regression is with menu overflow as they are not starting under the menuitem but rather from the top of the screen. We need to use the anchorRect for that.
Comment 14•5 years ago
|
||
(In reply to posinghaiku from comment #7)
Is there any progress on this? I suppose many Linux users with hiDPI display rely on
layout.css.devPixelsPerPxto scale the UI. It's been months with a broken browser experience for them. If there's anything I can do that does not involve writing code, I am happy to help.
Yup, I'm one of those Linux users. I am on Sway/Wayland and Arch Linux. I haven't been able to use Firefox with my 4K display and Wayland enabled. My C++ skills are beyond bad, so I don't think I can help with the bugfix.
| Assignee | ||
Comment 15•5 years ago
|
||
Comment 16•5 years ago
|
||
Comment 17•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Comment 18•5 years ago
|
||
Hello,
I'm happy to see the issue resolved but when will this fix be released? I'm on Firefox Version 84.0.2. Ubuntu 20.10 Wayland.
Comment 19•5 years ago
|
||
(In reply to Ari from comment #18)
Hello,
I'm happy to see the issue resolved but when will this fix be released? I'm on Firefox Version 84.0.2. Ubuntu 20.10 Wayland.
The milestone at the top of the bug report indicates that this issue was resolved for the Firefox 83.0 release. I can confirm that this bug has been fixed for me ever since: https://i.imgur.com/5I8ptdz.png.
Comment 20•5 years ago
|
||
(In reply to Sibo Dong from comment #19)
(In reply to Ari from comment #18)
Hello,
I'm happy to see the issue resolved but when will this fix be released? I'm on Firefox Version 84.0.2. Ubuntu 20.10 Wayland.
The milestone at the top of the bug report indicates that this issue was resolved for the Firefox 83.0 release. I can confirm that this bug has been fixed for me ever since: https://i.imgur.com/5I8ptdz.png.
My layout.css.devPixelsPerPx was set to 1.16 which causes the bug to occur still, but doesn't change the size when compared to 1.15. So using 1.15 as the value fixed the issue for me. Thank you.
Description
•