Bug 1634404 Fix popup position when layout.css.devPixelsPerPx > 0; r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D92759